--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/10433/10433048.png" type="x-icon/image">
   <title>Syllabus Checkbox</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
