--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/10433/10433048.png" type="x-icon/image">
   <title>Syllabus Updater</title>
   <style>
     body {
